--- a/optimal-staking-demo/frontend/Caddyfile
+++ b/optimal-staking-demo/frontend/Caddyfile
@@ -1,14 +1,39 @@
-:{$PORT} {
+# global options
+{
+    admin off # there's no need for the admin api in railway's environment
+    persist_config off # storage isn't persistent anyway
+    auto_https off # railway handles https for us, this would cause issues if left enabled
+    # runtime logs
+    log {
+        format json # set runtime log format to json mode 
+    }
+    # server options
+    servers {
+        trusted_proxies static private_ranges 100.0.0.0/8 # trust railway's proxy
+    }
+}
+
+# site block, listens on the $PORT environment variable, automatically assigned by railway
+:{$PORT:} {
+    # access logs
+    log {
+        format json # set access log format to json mode
+    }
+
+    # health check for railway
+    rewrite /health /*
+
+    # serve from the 'dist' folder (Vite builds into the 'dist' folder)
     root * /srv
-    
-    # Enable gzip compression
+
+    # enable gzipping responses
     encode gzip
-    
-    # SPA fallback - serve index.html for any route
-    try_files {path} /index.html
-    
-    # Serve static files
+
+    # serve files from 'dist'
     file_server
+
+    # if path doesn't exist, redirect it to 'index.html' for client side routing
+    try_files {path} /index.html
     
     # Security headers
     header {
@@ -26,7 +51,7 @@
     }
     header @static Cache-Control "public, max-age=31536000, immutable"
     
-    # Don't cache index.html
+    # Don't cache html files
     @html {
         path *.html
     }
