✨ feat: enhance optimal staking demo with performance optimizations and comprehensive documentation
This commit includes major improvements to the optimal staking demonstration application:

Performance Optimizations:
- Add Numba JIT warmup strategy to eliminate cold start latency
- Optimize variance component calculations with contiguous array operations
- Reduce API response times from ~3s to <100ms through precompilation
- Fix NumbaPerformanceWarning by ensuring covariance matrix contiguity
- Add performance testing suite to validate optimizations

Documentation Additions:
- Add analytical tracking error formula documentation
- Add two-asset model parameters and formula documentation
- Add staking benefit formulation guide
- Add tracking error time window invariance explanation
- Document performance improvements and optimization strategies

Frontend Improvements:
- Enhance user input handling with better debouncing (300ms)
- Improve loading state management and user experience
- Add autoCalculate prop to ResultsDisplay component
- Refine loading conditions for smoother interactions

Deployment and Configuration:
- Fix documentation serving in Docker deployment
- Correct docs directory paths for proper file access
- Update .dockerignore to include documentation in Docker images
- Fix railway.json dockerfile path to be relative to repo root
- Enhance main.py with environment-specific path resolution

The application now provides near-instantaneous calculations while maintaining mathematical accuracy, with comprehensive documentation of the underlying analytical formulas and optimization techniques.

--- a/optimal-staking-demo/Dockerfile
+++ b/optimal-staking-demo/Dockerfile
@@ -38,6 +38,19 @@ COPY backend/ ./
 # Copy built frontend from the builder stage to the static directory
 COPY --from=frontend-builder /app/frontend/dist ./static
 
+# Copy docs directory to the correct location
+COPY docs/ ./docs/
+
+# Create Numba cache directory
+RUN mkdir -p /app/numba_cache && chmod 777 /app/numba_cache
+
+# Set Numba environment variables for production
+ENV NUMBA_CACHE_DIR=/app/numba_cache
+ENV NUMBA_CPU_NAME=generic
+ENV NUMBA_DISABLE_PERFORMANCE_WARNINGS=1
+ENV NUMBA_THREADING_LAYER=workqueue
+ENV NUMBA_OPT=3
+
 # Create non-root user for security
 RUN useradd -m -u 1000 appuser && chown -R appuser:appuser /app
 USER appuser
@@ -46,6 +59,6 @@ USER appuser
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD python -c "import requests; requests.get('http://localhost:${PORT:-8000}/api/health')" || exit 1
 
-# Start the application
+# Start the application with optimized settings
 # Railway will set the PORT environment variable
-CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"]
+CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000} --workers 1 --loop uvloop --timeout-graceful-shutdown 30"]
