feat: update optimal staking demo to support 9-asset NCI index composition
- Extend backend models to support 9 assets (BTC, ETH, XRP, SOL, ADA, LINK, XLM, LTC, UNI)
- Update benchmark weights to latest NCI index composition
- Add support for new asset volatilities and correlations
- Update Numba warmup for 9-asset covariance matrix
- Update frontend TypeScript types for 9-asset configuration
- Add asset colors for LINK, LTC, UNI in UI
- Maintain backward compatibility with dynamic asset detection
- Update .gitignore and .cursorignore with repo/ exclusion

--- a/.cursorignore
+++ b/.cursorignore
@@ -70,8 +70,11 @@ api_keys.py
 secrets.py
 
 # Restricted folders and files
+repo/
+# repomix-output*
 archive/
 project_notes_legacy.md
+etf_market_making/
 
 # Claude Code files
 .claude/
